--- a/LESS/aboutBody.less
+++ b/LESS/aboutBody.less
@@ -7,6 +7,7 @@
 .aboutTop{
     border-bottom: @terminalGreen 1px solid;
     margin-bottom: 20px;
+    margin: 0 20px;
 }
 .aboutMiddle{
     text-align: center;
